# science-olympiad

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  IMPLEMENTATION_PROGRESS_V3.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
docs/: ARCHITECTURE.md  PRODUCT_DESIGN.md  science_olympiad_platform_comprehensive_design.md
migrations/: README.md
scripts/: analyze_structure.py  attach_snapshot_images.py  attach_specimen_images.py  build_courses.py  build_visual_content.py  crawl_catalog.py  create_admin.py  deploy.sh  enrich_flagship_visuals.py  enrich_lesson_media.py  fetch_specimen_images.py  flag_missing_figures.py  generate_lessons.py  generate_questions.py  import_local_tests.py  import_past_tests.py  ingest_reference_material.py  interleave_visual_exams.py  link_firebase_demo.py  map_distractor_misconceptions.py  mirror_db_to_prod.py  open_sources.py  prod_db_proxy.sh  remove_thin_lessons.py  seed.py  sync_assets_to_prod.py  sync_lessons_to_prod.py  sync_question_specs_to_prod.py  worker.py
tests/: conftest.py  test_accommodations.py  test_auth.py  test_content_challenges.py  test_crawl_operations.py  test_daily_plan.py  test_discovery.py  test_exam_flow.py  test_exam_recovery.py  test_exam_release_gates.py  test_firebase_identity.py  test_lessons.py  test_notifications.py  test_practice_labs.py  test_question_calibration.py  test_question_editorial.py  test_rights.py  test_scoring.py  test_security_and_integrity.py  test_seed_content.py  test_source_change_pipeline.py  test_tutor.py  (+6 more)
(+125 files in other folders)
