[project]
name = "science-olympiad-platform"
version = "0.2.0"
description = "Rights-aware Science Olympiad learning, mock exam, and remediation platform"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic[email]>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "python-jose[cryptography]>=3.3,<4",
  "passlib>=1.7,<2",
  "python-multipart>=0.0.9,<1",
  "httpx>=0.27,<1",
  "beautifulsoup4>=4.12,<5",
  "alembic>=1.13,<2",
  "pypdf>=5,<6",
  "firebase-admin>=6.5,<8",
  "psycopg2-binary>=2.9,<3",
  "redis>=5,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*", "alembic*", "migrations*"]
